--- a/inicio/templates/inicio/manual.html
+++ b/inicio/templates/inicio/manual.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redsa</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'polls/css/style1.css' %}">
-    <link rel="short icon" href="./images/redsaicon.png" type="image/x-icon">
-    <script src="{% static 'polls/js/jquery.js'%}" defer></script>
-    <script src="{% static 'polls/js/index.js' %}" defer></script>
+    <link rel="stylesheet" href="{% static 'inicio/css/style1.css' %}">
+    <script src="{% static 'inicio/js/jquery.js'%}" defer></script>
+    <script src="{% static 'inicio/js/index.js' %}" defer></script>
 
     <style>
     </style>
