--- a/inicio/templates/inicio/manual.html
+++ b/inicio/templates/inicio/manual.html
@@ -32,6 +32,7 @@
             <div class="content" id="manualDeUsuario">
                 <h1>Manual de Usuario</h1>
                 <p>Bienvenido a Manual de Usuario</p>
+                <p>Bienvenidox2</p>
             </div>    
 
         <aside id="columna">
