--- a/users/templates/users/nueva_reclamacion.html
+++ b/users/templates/users/nueva_reclamacion.html
@@ -3,15 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet", href="% static 'users/css/stylelogin.css' %">
+    <title>Nueva Reclamación</title>
+    <link rel="stylesheet" , href="../../static/css/homestyle.css">
+
 </head>
+
 <body>
-    <h2>Login</h2>
+    <h1>Registrar Nueva Reclamación</h1>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Login</button>
+        <button type="submit">Guardar</button>
     </form>
 </body>
+
 </html>
