--- a/users/templates/users/home.html
+++ b/users/templates/users/home.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Espacio de Reclamaciones</title>
-    <link rel="stylesheet" href="../../static/users/css/homestyle.css">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'users/css/homestyle.css'%}">
 </head>
 
 <body>
