--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet", href="% static 'users/css/stylelogin.css' %">
+    {% load static %}
+    <link rel="stylesheet", href="{% static 'users/css/stylelogin.css' %}">
 </head>
 <body>
     <h2>Login</h2>
