--- a/users/templates/users/nueva_reclamacion.html
+++ b/users/templates/users/nueva_reclamacion.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nueva Reclamación</title>
-    <link rel="stylesheet" , href="../../static/css/homestyle.css">
+    {% load static %}
+    <link rel="stylesheet" , href="{% static ''%}">
 
 </head>
 
